# aprb

./: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js  worklog.md
client/: project.godot
client/scenes/: MatchScreen.gd  MatchScreen.tscn  ProfileScreen.tscn  SearchScreen.gd  SearchScreen.tscn
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/postgres/: postgres.conf
infra/redis/: redis.conf
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/domain/: mod.rs
server/src/match/: mod.rs
server/src/matchmaking/: mod.rs
server/src/rating/: mod.rs
server/src/simulation/: bot.rs  mod.rs  resolver.rs
src/: main.js
src/core/: GameLoop.js  LevelGenerator.js  SceneManager.js  Spawner.js  State.js
src/entities/: Bullet.js  Enemy.js  Gate.js  Player.js
src/scenes/: ConfirmScene.js  GameScene.js  LevelSelectScene.js  MenuScene.js  ResultScene.js
