[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
axum = { version = "0.7", features = ["ws", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.25", features = ["tokio-comp"] }
futures-util = "0.3"
